--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Mi chiamo David Machì sono uno sviluppatorre appassionato di front-end, specializzato nella creazione di
                 interfacce web moderne per siti dinamici e statici. Mi dedico inoltre con passione al mondo del 3D
                 realizzando diversi progetti interattivi. Il mio obiettivo è progettare
-                applicazioni pulite, responsive e intuitive, che uniscano estetica e usabilità.
+                applicazioni pulite, responsive ed intuitive, che uniscano estetica e usabilità.
             </p>
         </div>
         <!-- <img class="astra" src="/img/astra2.png"> -->
@@ -41,7 +41,7 @@
         <div class="project-grid">
             <div class="project text-animate">
                 <img class="projectimg" src="img/img2.png" alt="EJS Project"
-                    onclick="openModal('progetti/configuratoreDist') ">
+                    onclick="openModal('progetti/configuratoreSedia/index.html') ">
                 <p id="description">Il progetto rappresenta una moderna interfaccia utente per un e-commerce
                     specializzato nella vendita di sedie di design. L'intera struttura è stata realizzata in React.
                     L'aspetto visivo è stato curato nei minimi dettagli grazie all'utilizzo di Tailwind CSS.
